syntax = "proto3";
package promptkit.script.v1;

enum ErrorCode {
  ERROR_CODE_UNSPECIFIED = 0;
  ERROR_CODE_UNKNOWN = 1;
  ERROR_CODE_DEADLINE_EXCEEDED = 2;
  ERROR_CODE_INTERNAL = 3;
  ERROR_CODE_GUEST_ABORTED = 4;

  reserved 1024 to max;
}
